# cmake-pong

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: app.cpp
include/: game.hpp
include/msdll/: msdll.hpp
src/: ball.cpp  game.cpp  paddle.cpp  rect.cpp
src/msdll/: events.cpp  exception.cpp  function.cpp  renderer.cpp  texture.cpp  timer.cpp  window.cpp
